# stream-saver

./: .gitattributes  .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildspec.json
.codex/skills/stream-saver/: SKILL.md
data/effects/: redact_blur.effect
data/locale/: en-US.ini
docs/: install.md  protocol.md
scripts/: ocr_smoke.py  package-managed-worker.ps1  package-release-linux-wsl.ps1  package-release-linux.sh  package-release-windows.ps1  package-worker.ps1
src/: image_encoder.cpp  image_encoder.h  matcher.cpp  matcher.h  ocr_client.cpp  ocr_client.h  plugin.cpp  stream_saver_filter.cpp  stream_saver_filter.h  worker_process.cpp  worker_process.h
tests/cpp/: test_matcher.cpp
tests/python/: test_worker_protocol.py
worker/: README.md  __init__.py  requirements-linux.txt  requirements.txt  stream-saver-ocr  stream_saver_ocr.py
